--- a/iron-man-2008.html
+++ b/iron-man-2008.html
@@ -344,11 +344,11 @@
 
                       <th style="text-align: center;">Links:</th>
 
-                      <a href="#downloads-links" class="open-modal">Movies Download Link</a>
+                      <a href="#subs-links" class="open-modal">Movies Download Link</a>
                     </div>
 
 
-                    <div id="downloads-links" class="zoom-anim-dialog mfp-hide modal">
+                    <div id="subs-links" class="zoom-anim-dialog mfp-hide modal">
                       <table class="main__table main__table--dash">
                         <thead>
                           <tr>
