--- a/iron-man-2008.html
+++ b/iron-man-2008.html
@@ -509,7 +509,7 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/plyr.min.js"></script>
     <script src="assets/js/main-s.js"></script>
-    <script src="../../plugins/loader/waitMe.js"></script>
+    <script src="./plugins/loader/waitMe.js"></script>
     <script src="assets/js/forms.js"></script>
     <script src="assets/js/single_item.js"></script>
     <script src="/assets/js/main--s.js"></script>
