--- a/iron-man-2008.html
+++ b/iron-man-2008.html
@@ -499,7 +499,7 @@
     <!--
     - custom js link
   -->
-    <script src="asset/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
@@ -509,7 +509,7 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/plyr.min.js"></script>
     <script src="assets/js/main-s.js"></script>
-    <script src="./plugins/loader/waitMe.js"></script>
+    <script src="../../plugins/loader/waitMe.js"></script>
     <script src="assets/js/forms.js"></script>
     <script src="assets/js/single_item.js"></script>
     <script src="/assets/js/main--s.js"></script>
