--- a/iron-man-2008.html
+++ b/iron-man-2008.html
@@ -512,7 +512,7 @@
     <script src="../../plugins/loader/waitMe.js"></script>
     <script src="assets/js/forms.js"></script>
     <script src="assets/js/single_item.js"></script>
-    <script src="/assets/js/main--s.js"></script>
+    <script src="assets/js/main--s.js"></script>
 
 
     <!--
