--- a/iron-man-2008.html
+++ b/iron-man-2008.html
@@ -344,11 +344,11 @@
 
                       <th style="text-align: center;">Links:</th>
 
-                      <a href="#subs-links" class="open-modal">Movies Download Link</a>
+                      <a href="#downloads-links" class="open-modal">Movies Download Link</a>
                     </div>
 
 
-                    <div id="subs-links" class="zoom-anim-dialog mfp-hide modal">
+                    <div id="downloads-links" class="zoom-anim-dialog mfp-hide modal">
                       <table class="main__table main__table--dash">
                         <thead>
                           <tr>
@@ -500,19 +500,18 @@
     - custom js link
   -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/slider-radio.js"></script>
-    <script src="assets/js/select2.min.js"></script>
-    <script src="assets/js/smooth-scrollbar.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/plyr.min.js"></script>
-    <script src="assets/js/main-s.js"></script>
+    <script src="../../js/jquery-3.5.1.min.js"></script>
+    <script src="../../js/bootstrap.bundle.min.js"></script>
+    <script src="../../js/owl.carousel.min.js"></script>
+    <script src="../../js/slider-radio.js"></script>
+    <script src="../../js/select2.min.js"></script>
+    <script src="../../js/smooth-scrollbar.js"></script>
+    <script src="../../js/jquery.magnific-popup.min.js"></script>
+    <script src="../../js/plyr.min.js"></script>
+    <script src="../../js/main.js"></script>
     <script src="../../plugins/loader/waitMe.js"></script>
-    <script src="assets/js/forms.js"></script>
-    <script src="assets/js/single_item.js"></script>
-    <script src="assets/js/main--s.js"></script>
+    <script src="../../js/forms.js"></script>
+    <script src="../../js/single_item.js"></script>
 
 
     <!--
