--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="shortcut icon" href="./assets/images/icon.svg" type="image/png">
 
-    <title>Page Not Found</title>
+    <title>404 Page Not Found</title>
     <link rel="stylesheet" href="assets/css/404.css">
 
     <!--
